DIAC-2398 Springboot 3 Java 21 upgrade (#597)
* clean up of versions and minor bumps

* springboot 2.x -> 3.0

* springboot 3.0 -> 3.1

* springboot 3.1 -> 3.4

* springboot 3.4 -> 3.5

* java 17 -> 21

* version bumps and build.gradle cleanup

* contract test fix

* minor bumps

* add pact folder to git ignore

* sonar fixes and coverage

* adding dummy  suppressions

* fix

* removing dummy suppression

* refactoring CcdScenarioRunnerTest and cleaning up scenarios

* removing peek and adding test report to pr pipeline

* improving EventTest

* fixing reportsDir

* fixing dependency check and CVEs

* fix

* removing unneeded suppression

* uk.gov.hmcts.java bump

* removing false positive suppression

* bumping plugin

* fix?

* fix to owasp

* tomcat global bump

* netty bump

* remove todo

* running CcdScenarioRunnerTest concurrently

* adding test retry

* removing retry loop

* improvement

* fixes

* Revert "removing retry loop"

This reverts commit 9a25b820

* Revert "adding test retry"

This reverts commit 575d67e257b0f91693da80e5d5b330de8be2ca8b.

* fixes